syntax = "proto3";

import "google/api/annotations.proto";

import "google/protobuf/empty.proto";

option go_package = "/bookstore";

message Book {
  string isbn = 1;

  string path = 10000;

  string id = 10001;
}

message CreateBookRequest {
  string parent = 1;

  string id = 2;

  Book resource = 3;
}

message ReadBookRequest {
  string path = 1;
}

message UpdateBookRequest {
  string path = 1;

  Book resource = 2;
}

message DeleteBookRequest {
  string path = 1;
}

message ListBookRequest {
  string parent = 1;
}

message ListBookResponse {
  repeated Book resources = 1;
}

message ApplyBookRequest {
  string path = 1;

  Book resource = 2;
}

service Bookstore {
  rpc CreateBook ( CreateBookRequest ) returns ( Book ) {
    option (google.api.http) = { post: "/books", body: "resource" };
  }

  rpc ReadBook ( ReadBookRequest ) returns ( Book ) {
    option (google.api.http) = { get: "/{path=books/*}" };
  }

  rpc UpdateBook ( UpdateBookRequest ) returns ( Book ) {
    option (google.api.http) = {
      patch: "/{resource.path=books/*}",
      body: "resource"
    };
  }

  rpc DeleteBook ( DeleteBookRequest ) returns ( google.protobuf.Empty ) {
    option (google.api.http) = { delete: "/{path=books/*}" };
  }

  rpc ListBook ( ListBookRequest ) returns ( ListBookResponse ) {
    option (google.api.http) = { get: "/books" };
  }

  rpc ApplyBook ( ApplyBookRequest ) returns ( Book ) {
    option (google.api.http) = { put: "/{path=books/*}", body: "resource" };
  }
}
