syntax = "proto3";

package example.bookstore.v1;

import "google/api/annotations.proto";

import "google/api/client.proto";

import "google/api/field_behavior.proto";

import "google/api/resource.proto";

import "google/protobuf/empty.proto";

import "google/protobuf/field_mask.proto";

option go_package = "/bookstore";

// A service.
service Bookstore {
  // An aep-compliant Create method for book.
  rpc Createbook ( CreatebookRequest ) returns ( book ) {
    option (google.api.http) = {
      post: "/{parent=publishers/*}/books",
      body: "book"
    };

    option (google.api.method_signature) = "parent,book";
  }

  // An aep-compliant Get method for book.
  rpc Getbook ( GetbookRequest ) returns ( book ) {
    option (google.api.http) = { get: "/{path=publishers/*/books/*}" };

    option (google.api.method_signature) = "path";
  }

  // An aep-compliant Update method for book.
  rpc Updatebook ( UpdatebookRequest ) returns ( book ) {
    option (google.api.http) = {
      patch: "/{path=publishers/*/books/*}",
      body: "book"
    };

    option (google.api.method_signature) = "book,update_mask";
  }

  // An aep-compliant Delete method for book.
  rpc Deletebook ( DeletebookRequest ) returns ( google.protobuf.Empty ) {
    option (google.api.http) = { delete: "/{path=publishers/*/books/*}" };

    option (google.api.method_signature) = "path";
  }

  // An aep-compliant List method for books.
  rpc Listbook ( ListbookRequest ) returns ( ListbookResponse ) {
    option (google.api.http) = { get: "/{parent=publishers/*}/books" };

    option (google.api.method_signature) = "parent";
  }

  // An aep-compliant Apply method for books.
  rpc Applybook ( ApplybookRequest ) returns ( book ) {
    option (google.api.http) = {
      put: "/{path=publishers/*/books/*}",
      body: "book"
    };
  }

  // An aep-compliant Create method for publisher.
  rpc Createpublisher ( CreatepublisherRequest ) returns ( publisher ) {
    option (google.api.http) = {
      post: "/{parent=publishers}",
      body: "publisher"
    };

    option (google.api.method_signature) = "parent,publisher";
  }

  // An aep-compliant Get method for publisher.
  rpc Getpublisher ( GetpublisherRequest ) returns ( publisher ) {
    option (google.api.http) = { get: "/{path=publishers/*}" };

    option (google.api.method_signature) = "path";
  }

  // An aep-compliant Update method for publisher.
  rpc Updatepublisher ( UpdatepublisherRequest ) returns ( publisher ) {
    option (google.api.http) = {
      patch: "/{path=publishers/*}",
      body: "publisher"
    };

    option (google.api.method_signature) = "publisher,update_mask";
  }

  // An aep-compliant Delete method for publisher.
  rpc Deletepublisher ( DeletepublisherRequest ) returns ( google.protobuf.Empty ) {
    option (google.api.http) = { delete: "/{path=publishers/*}" };

    option (google.api.method_signature) = "path";
  }

  // An aep-compliant List method for publishers.
  rpc Listpublisher ( ListpublisherRequest ) returns ( ListpublisherResponse ) {
    option (google.api.http) = { get: "/{parent=publishers}" };

    option (google.api.method_signature) = "parent";
  }

  // An aep-compliant Apply method for publishers.
  rpc Applypublisher ( ApplypublisherRequest ) returns ( publisher ) {
    option (google.api.http) = { put: "/{path=publishers/*}", body: "publisher" };
  }
}

// A book.
message book {
  // A Author.
  message Author {
    // Field for firstName.
    string firstName = 1;

    // Field for lastName.
    string lastName = 2;
  }

  // Field for author.
  repeated Author author = 5;

  // Field for isbn.
  repeated string isbn = 1 [(google.api.field_behavior) = REQUIRED];

  // Field for price.
  float price = 2 [(google.api.field_behavior) = REQUIRED];

  // Field for published.
  bool published = 3 [(google.api.field_behavior) = REQUIRED];

  // Field for edition.
  int32 edition = 4;

  // Field for path.
  string path = 10000;

  // Field for id.
  string id = 10001;
}

// A Create request for a  book resource.
message CreatebookRequest {
  // A field for the parent of book
  string parent = 10013 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = { }
  ];

  // An id that uniquely identifies the resource within the collection
  string id = 10014;

  // The resource to perform the operation on.
  book book = 10015 [(google.api.field_behavior) = REQUIRED];
}

// Request message for the Getbook method
message GetbookRequest {
  // The globally unique identifier for the resource
  string path = 10018 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = { type: "bookstore.example.com/book" }
  ];
}

// Request message for the Updatebook method
message UpdatebookRequest {
  // The globally unique identifier for the resource
  string path = 10018 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = { type: "bookstore.example.com/book" }
  ];

  // The resource to perform the operation on.
  book book = 10015 [(google.api.field_behavior) = REQUIRED];

  // The update mask for the resource
  google.protobuf.FieldMask update_mask = 10012;
}

// Request message for the Deletebook method
message DeletebookRequest {
  // The globally unique identifier for the resource
  string path = 10018 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = { type: "bookstore.example.com/book" }
  ];
}

// Request message for the Listbook method
message ListbookRequest {
  // A field for the parent of book
  string parent = 10013 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = { }
  ];

  // The page token indicating the starting point of the page
  string page_token = 10010;

  // The maximum number of resources to return in a single page.
  int32 max_page_size = 10017;
}

// Response message for the Listbook method
message ListbookResponse {
  // A list of books
  repeated book results = 10016;

  // The page token indicating the ending point of this response.
  string next_page_token = 10011;
}

// Request message for the Applybook method
message ApplybookRequest {
  // The globally unique identifier for the resource
  string path = 10018 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = { type: "bookstore.example.com/book" }
  ];

  // The resource to perform the operation on.
  book book = 10015 [(google.api.field_behavior) = REQUIRED];
}

// A publisher.
message publisher {
  // Field for description.
  string description = 1;

  // Field for path.
  string path = 10000;

  // Field for id.
  string id = 10001;
}

// A Create request for a  publisher resource.
message CreatepublisherRequest {
  // A field for the parent of publisher
  string parent = 10013 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = { }
  ];

  // An id that uniquely identifies the resource within the collection
  string id = 10014;

  // The resource to perform the operation on.
  publisher publisher = 10015 [(google.api.field_behavior) = REQUIRED];
}

// Request message for the Getpublisher method
message GetpublisherRequest {
  // The globally unique identifier for the resource
  string path = 10018 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = { type: "bookstore.example.com/publisher" }
  ];
}

// Request message for the Updatepublisher method
message UpdatepublisherRequest {
  // The globally unique identifier for the resource
  string path = 10018 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = { type: "bookstore.example.com/publisher" }
  ];

  // The resource to perform the operation on.
  publisher publisher = 10015 [(google.api.field_behavior) = REQUIRED];

  // The update mask for the resource
  google.protobuf.FieldMask update_mask = 10012;
}

// Request message for the Deletepublisher method
message DeletepublisherRequest {
  // The globally unique identifier for the resource
  string path = 10018 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = { type: "bookstore.example.com/publisher" }
  ];
}

// Request message for the Listpublisher method
message ListpublisherRequest {
  // A field for the parent of publisher
  string parent = 10013 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = { }
  ];

  // The page token indicating the starting point of the page
  string page_token = 10010;

  // The maximum number of resources to return in a single page.
  int32 max_page_size = 10017;
}

// Response message for the Listpublisher method
message ListpublisherResponse {
  // A list of publishers
  repeated publisher results = 10016;

  // The page token indicating the ending point of this response.
  string next_page_token = 10011;
}

// Request message for the Applypublisher method
message ApplypublisherRequest {
  // The globally unique identifier for the resource
  string path = 10018 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = { type: "bookstore.example.com/publisher" }
  ];

  // The resource to perform the operation on.
  publisher publisher = 10015 [(google.api.field_behavior) = REQUIRED];
}
